background inherit removal for Safari fix (dark mode) for album-container

--- a/src/components/Music/Music.scss
+++ b/src/components/Music/Music.scss
@@ -15,7 +15,7 @@
     flex-direction: column;
     /* border: 1px solid black; */
     align-items: center;
-    background-color: inherit;
+    /* background-color: inherit; */
     text-align: center;
 }
 
